fixed id overlap for login and admin

--- a/frontend/src/Admin/Components/Main/Profile/CreateAccount.css
+++ b/frontend/src/Admin/Components/Main/Profile/CreateAccount.css
@@ -24,7 +24,7 @@
   margin-left: 0.5vw;
   border-radius: 1em;
 }
-#email,
+#admin-email-input,
 #password,
 #conpassword,
 #studno,
